tests/snapshots/examples_fixtures/type_system__failing__32_direct_time_hof_missing_effect.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/32_direct_time_hof_missing_effect.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `time`.

  examples/type_system/failing/32_direct_time_hof_missing_effect.flx:4:5
  |
4 |     time(/() -> 1)
  |     ^^^^

Hint:
  Define it first: let time = ...;
== stdout ==
<not executed>
